upload and link resume

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
           <a href="https://www.goodreads.com/user/show/51677921-andrea">Goodreads</a>
         </p>
         <p>Hi, I'm Andrea, and I intern at <a href="https://phet.colorado.edu">PhET Interactive Simulations</a> based in University of Colorado Boulder! Computer science is my passion, and I want to change the world through technology. I also love food and baking!</p>
+        <p><a href="resume201807.pdf">See my resume</a></p>
       </div></div>
 
       <div class="row"><div class="col-md-12">
