--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <div class="container">
 
-      <div class="row"><div class="col-md-12">
+      <div class="row"><div class="col-md-12 text-center">
         <h1>Andrea Lin</h1>
         <p>Developer from Boulder, Colorado
         <p>
@@ -21,46 +21,67 @@
           <a href="https://www.linkedin.com/in/andrea-l-041394120">LinkedIn</a> |
           <a href="https://www.goodreads.com/user/show/51677921-andrea">Goodreads</a>
         </p>
-        <p>Hi, I'm Andrea, and I intern at <a href="https://phet.colorado.edu">PhET Interactive Simulations</a> based in University of Colorado Boulder! Computer science is my passion, and I want to change the world through technology. I also love food and baking!</p>
-        <p><a href="https://andrealin.info/resume201807.pdf">See my resume</a></p>
-      </div></div>
-
-      <div class="row"><div class="col-md-12">
-        <h2>experience</h2>
-        <p>Massachusetts Institute of Technology: Starting Fall 2018</p>
-        <p>PhET Interactive Simulations: Software Development Intern May 2016 - Present</p>
-        <p>Fairview High School: Graduated May 2018</p>
-      </div></div>
-
-      <div class="row"><div class="col-md-12">
-        <h2>works</h2>
       </div></div>
 
       <div class="row">
-        <div class="col-md-6">
+        <div class="col-md-4 text-right">
+          <h2>about</h2>
+        </div>
+        <div class="col-md-8">
+          <p>Hi, I'm Andrea, and I intern at <a href="https://phet.colorado.edu">PhET Interactive Simulations</a> based in University of Colorado Boulder! Computer science is my passion, and I want to change the world through technology. I also love food and baking!</p>
+          <p><a href="https://andrealin.info/resume201807.pdf">See my resume</a></p>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-md-4 text-right">
+          <h2>experience</h2>
+        </div>
+        <div class="col-md-8">
+          <p>Massachusetts Institute of Technology: Starting Fall 2018</p>
+          <p>PhET Interactive Simulations: Software Development Intern May 2016 - Present</p>
+          <p>Fairview High School: Graduated May 2018</p>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-md-4 text-right">
+          <h2>works</h2>
+        </div>
+        <div class="col-md-4">
           <h3>Projectile Motion</h3>
           <p><a href="https://phet.colorado.edu/sims/html/projectile-motion/latest/projectile-motion_en.html">
             <img src="projectile-motion-screenshot.png" alt="Projectile Motion Screenshot" class="img-fluid">
           </a></p>
-          <p class="text-justify">Projectile Motion is a free online educational computer program that allows students to interactively explore the physics of 2D motion. In fall of 2017, I published Projectile Motion with PhET, a project based in University of Colorado Boulder to create free interactive math and science simulations. The simulation has been translated by volunteers around the world into over 25 languages and used by students and teachers close to a million times.</p>
+        </div>
+        <div class="col-md-4">
           <p>
             <a href="https://github.com/phetsims/projectile-motion">GitHub repo</a> |
             <a href="https://phet.colorado.edu/en/simulation/projectile-motion">Publication page</a> |
             <a href="https://phet.colorado.edu/sims/html/projectile-motion/latest/projectile-motion_en.html">See it!!!</a>
           </p>
+          <p class="text-justify">Projectile Motion is a free online educational computer program that allows students to interactively explore the physics of 2D motion. In fall of 2017, I published Projectile Motion with PhET, a project based in University of Colorado Boulder to create free interactive math and science simulations. The simulation has been translated by volunteers around the world into over 25 languages and used by students and teachers close to a million times.</p>
         </div>
       </div>
 
-      <div class="row"><div class="col-md-12">
-        <h2>skills</h2>
-        <p>Languages: JavaScript, Python, Java, HTML, CSS</p>
-        <p>Tools: Atom, WebStorm, Sublime Text, macOS, Chrome DevTools</p>
-      </div></div>
+      <div class="row">
+        <div class="col-md-4 text-right">
+          <h2>skills</h2>
+        </div>
+        <div class="col-md-8">
+          <p>Languages: JavaScript, Python, Java, HTML, CSS</p>
+          <p>Tools: Atom, WebStorm, Sublime Text, macOS, Chrome DevTools</p>
+        </div>
+      </div>
 
-      <div class="row"><div class="col-md-12">
-        <h2>contact</h2>
-        <p>andrealin2018 [at] gmail [dot] com</p>
-      </div></div>
+      <div class="row">
+        <div class="col-md-4 text-right">
+          <h2>contact</h2>
+        </div>
+        <div class="col-md-8">
+          <p>andrealin2018 [at] gmail [dot] com</p>
+        </div>
+      </div>
 
     </div>
 
