update resume href

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </div>
         <div class="col-md-9">
           <p>Hi, I'm Andrea, and I intern at <a href="https://phet.colorado.edu">PhET Interactive Simulations</a> based in University of Colorado Boulder! Computer science is my passion, and I want to change the world through technology. I also love food and baking!</p>
-          <p><a href="https://andrealin.info/resume201807.pdf">See my resume</a></p>
+          <p><a href="https://andrealin.info/resume.pdf">See my resume</a></p>
         </div>
       </div>
 
