--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <h2>about</h2>
         </div>
         <div class="col-md-9">
-          <p>Hi, I'm Andrea, and I intern at <a href="https://phet.colorado.edu">PhET Interactive Simulations</a> based in University of Colorado Boulder! Computer science is my passion, and I want to change the world through technology. I also love food and baking!</p>
+          <p>Hi, I'm Andrea! As an undergraduate at MIT, I study computer science and engineering. My interests are cryptography, Python, and storytelling.</p>
           <p><a href="Resume January 2019.pdf">See my resume</a></p>
         </div>
       </div>
