--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
           <h2>experience</h2>
         </div>
         <div class="col-md-9">
-          <p>Massachusetts Institute of Technology: Starting Fall 2018</p>
-          <p>PhET Interactive Simulations: Software Development Intern May 2016 - Present</p>
-          <p>Fairview High School: Graduated May 2018</p>
+          <p>Massachusetts Institute of Technology: 2018 - 2022</p>
+          <p>PhET Interactive Simulations Software Development Intern: May 2016 - Aug 2018</p>
+          <p>Fairview High School: 2014 - 2018</p>
         </div>
       </div>
 
