--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </div>
         <div class="col-md-9">
           <p>Hi, I'm Andrea! As an undergraduate at MIT, I study computer science and engineering. My interests are cryptography, Python, and storytelling.</p>
-          <p><a href="Resume January 2019.pdf">See my resume</a></p>
+          <p><a href="resume.pdf">See my resume</a></p>
         </div>
       </div>
 
