--- a/index.html
+++ b/index.html
@@ -1,1 +1,98 @@
-Andrea Lin
+<!-- DOCTYPE -->
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <title>Andrea Lin</title>
+    <meta charset="utf-8">
+    <!-- Viewport Meta Tag -->
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!-- Bootstrap CSS -->
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  </head>
+  <body>
+
+    <div class="container">
+
+      <div class="row"><div class="col-md-12 text-center">
+        <h1>Andrea Lin</h1>
+        <p>Developer from Boulder, Colorado
+        <p>
+          <a href="https://github.com/andrealin">GitHub</a> |
+          <a href="https://www.linkedin.com/in/andrea-l-041394120">LinkedIn</a> |
+          <a href="https://www.goodreads.com/user/show/51677921-andrea">Goodreads</a>
+        </p>
+      </div></div>
+
+      <div class="row">
+        <div class="col-md-3 text-right">
+          <h2>about</h2>
+        </div>
+        <div class="col-md-9">
+          <p>Hi, I'm Andrea! As an undergraduate at MIT, I study computer science and engineering. My interests are cryptography, Python, and storytelling.</p>
+          <p><a href="resume.pdf">See my resume</a></p>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-md-3 text-right">
+          <h2>experience</h2>
+        </div>
+        <div class="col-md-9">
+          <p>Massachusetts Institute of Technology: 2018 - 2022</p>
+          <p>PhET Interactive Simulations Software Development Intern: May 2016 - Aug 2018</p>
+          <p>Fairview High School: 2014 - 2018</p>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-md-3 text-right">
+          <h2>works</h2>
+        </div>
+        <div class="col-md-4">
+          <h3>Projectile Motion</h3>
+          <p><a href="https://phet.colorado.edu/sims/html/projectile-motion/latest/projectile-motion_en.html">
+            <img src="projectile-motion-screenshot.png" alt="Projectile Motion Screenshot" class="img-fluid">
+          </a></p>
+        </div>
+        <div class="col-md-5">
+          <p>
+            <a href="https://github.com/phetsims/projectile-motion">GitHub repo</a> |
+            <a href="https://phet.colorado.edu/en/simulation/projectile-motion">Publication page</a> |
+            <a href="https://phet.colorado.edu/sims/html/projectile-motion/latest/projectile-motion_en.html">See it!!!</a>
+          </p>
+          <p class="text-justify">Projectile Motion is a free online educational computer program that allows students to interactively explore the physics of 2D motion. In fall of 2017, I published Projectile Motion with PhET, a project based in University of Colorado Boulder to create free interactive math and science simulations. The simulation has been translated by volunteers around the world into over 25 languages and used by students and teachers close to a million times.</p>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-md-3 text-right">
+          <h2>skills</h2>
+        </div>
+        <div class="col-md-9">
+          <p>Languages: JavaScript, Python, Java, HTML, CSS</p>
+          <p>Tools: Atom, WebStorm, Sublime Text, macOS, Chrome DevTools</p>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-md-3 text-right">
+          <h2>contact</h2>
+        </div>
+        <div class="col-md-9">
+          <p>andrealin2018 [at] gmail [dot] com</p>
+        </div>
+      </div>
+
+    </div>
+
+    <!-- JavaScript: placed at the end of the document so the pages load faster -->
+		<!-- jQuery library -->
+		<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+
+		<!-- Popper -->
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+
+		<!-- Latest compiled and minified Bootstrap JavaScript -->
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  </body>
+</html>
